fixing carousel button bug (leaderboards button had overspilling text when page was reduced in size)

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -56,6 +56,8 @@ h5 {
     margin: 3% 10%;
     border: 3px solid #668080;
     color: whitesmoke;
+    overflow: wrap;
+    min-width: 270px;
 }
 
 .playNowBtn:hover {
